yoshimi 1.5.11 rc2

2019-5-7 Will
* Further improvements to instance behaviour.
  Time delays are almost entirely due to GUI
  slow startup. This has been an issue for
  a very long time.
* Put Autostart back on direct call.
  Still problems with GUI when threaded.

2019-5-6 Will
* Improved new/multi instance behaviour.
  There is still an issue with the gui causing
  occasional crashes :(
* Set version as 1.5.11 rc1

2019-5-5 Will
* Completed padSynth parameter conversions.
* Enumerated history lists.
* Improved history list internal structures.
* Moved most additions from synthEngine to Interchange.
  This was done so that loading (say) a state file
  didn't falsely update/corrupt other history lists.

2019-5-4 Will
* Added CLI access to spot noise.
* Linked spot noise appearance to single master feature.
* Rationalised interchange parameters for setpadparams.
* Updated docs.

2019-5-3 Will
* BugFix: Primary definition of singlePath in wrong file.
* 'Enable Single Master' now always hidden for LV2.
  It's not relevant to it at all.
* CLI can now handle single master control.
* Updated docs.
* First trial of spot noise.

2019-5-1 Will
* All Interface files have no 'using namespace std'
* All MusicIO files have no 'using namespace std'
* Single master instance now properly accessed.
  Not CLI yet.

2019-4-30 Will
* Single master instance now switchable from GUI.
  Also made some refinements to code allowing this
  to be hidden until certain it's safe.
* BugFix: Crashes on some systems when opening the GUI.
* Refined instance startup tests in main()

2019-4-25 Will
* Added PART_POLIPONY to globals
  It had been defined numerically in two places!
* Added PART_POLY, PART_MONO, PART_LEGATO, MIDI_LEGATO
  MIDI_NOT_LEGATO to globals
  These had been set numerically in multiple locations.
* More transfers from 'using namespace' to 'std::'

2019-4-24 Will
* Added tooltips to master and part VU meters.
* Single main instance now seems correct.